# tern

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/tern/: __init__.py  agent.py  config.py  main.py  models.py  scaffold.py  subagents.py  tools.py  ui.py
src/tern/templates/: CONSTITUTION.md  checker.md  config.yaml  maker.md  planner.md  spec.yaml  summarizer.md
tests/: test_agent.py  test_config.py  test_main.py  test_models.py  test_scaffold.py  test_subagents.py  test_tools.py  test_ui.py
