[project]
name = "tern"
version = "0.1.0"
description = "A provider-agnostic, flexible, multi-agent coding assistance system"
readme = "README.md"
authors = [
    { name = "keiferc", email = "15503711+keiferc@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
]

[project.scripts]
tern = "tern.main:invoke_agent"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\")",
    "serial",
]
addopts = "-v --cov=tern --cov-branch --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "__init__.py" # empty files
]
